BankManagementSystem/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bankmanagementsystem
  labels:
    name: bankmanagementsystem
    environment: production
    app: bankmanagementsystem
