BankManagementSystem/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankmanagementsystem-service
  namespace: bankmanagementsystem
  labels:
    app: bankmanagementsystem
    environment: production
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: bankmanagementsystem
